--- a/src/style/main.css
+++ b/src/style/main.css
@@ -1,3 +1,10 @@
+@font-face {
+  font-family: "Sora";
+  /* need to use different font file for IE */
+  src: url("../../static/fonts/Sora-ExtraBold.ttf") format("truetype");
+  font-weight: normal;
+}
+
 * {
   padding: 0;
   margin: 0;
@@ -23,4 +30,38 @@ p {
   left: 200px;
   color: white;
   width: 300px;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  /* align our svg to the center of the viewport both horizontally and vertically */
+  height: 100vh;
+  display: grid;
+  place-items: center;
+}
+
+.meter-container {
+  height: 10em;
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  top: 0;
+  right: 50px;
+  bottom: 0;
+  margin: auto;
+}
+
+svg {
+  /* a perfectly square <svg> element that will never overflow the viewport */
+  width: 10vmin;
+  height: 10vmin;
+  z-index: 2;
+  margin: 15px 0;
+  filter: drop-shadow(2px 0 0 #eee) drop-shadow(-2px 0 0 #eee)
+    drop-shadow(0 2px 0 #eee) drop-shadow(0 -2px 0 #eee);
 }
