--- a/src/style/main.css
+++ b/src/style/main.css
@@ -92,7 +92,30 @@ svg {
   /* display: none; */
 }
 
-.enter-bg {
+.hero-text .title {
+  width: 600px;
+  margin-left: 30px;
+}
+
+.hero-text .subheading {
+  margin-top: 10px;
+  width: 500px;
+  margin-left: 30px;
+  line-height: 1.4;
+}
+
+.hero-text-content {
+  z-index: 2;
+  clip-path: polygon(0 0, 0 0, 0 100%, 0 100%);
+  position: absolute;
+}
+
+.hero-text-content.original {
+  opacity: 0;
+  clip-path: polygon(0 0, 0 0, 0 100%, 0 100%);
+}
+
+.hero-enter-bg {
   height: 250px;
   /* width: 600px; */
   width: 0px;
@@ -112,23 +135,13 @@ svg {
     radial-gradient(at 0% 0%, hsla(343, 100%, 76%, 1) 0, transparent 50%);
 }
 
-.enter-overlay {
+.hero-enter-overlay {
   position: absolute;
   display: flex;
   align-items: center;
 }
 
-.text-content {
-  z-index: 2;
-  clip-path: polygon(0 0, 0 0, 0 100%, 0 100%);
-  position: absolute;
-}
-
-.text-content.original {
-  opacity: 0;
-}
-
-.enter-line {
+.hero-enter-line {
   height: 0px;
   width: 6px;
   transform: rotate(10deg) skewY(-10deg);
@@ -138,20 +151,7 @@ svg {
   background: #000;
 }
 
-.hero-text .heading {
-  width: 600px;
-  margin-left: 30px;
-}
-
-.hero-text .subheading {
-  margin-top: 10px;
-  width: 500px;
-  margin-left: 30px;
-
-  line-height: 1.4;
-}
-
-.heading {
+.title {
   font-size: 85px;
   font-weight: bold;
 }
@@ -159,24 +159,98 @@ svg {
 .subheading {
   font-size: 32px;
   font-weight: normal;
+  color: black;
+}
+
+.heading {
+  font-size: 45px;
+}
+
+.body-text {
+  font-size: 16px;
 }
 
 .gradient-accent {
-  background: linear-gradient(
-    39deg,
-    rgba(240, 199, 17, 1) 0%,
-    rgba(255, 255, 255, 1) 90%
-  );
+  background: linear-gradient(39deg, rgba(240, 199, 17, 1) 0%, #e7e7e7 90%);
   -webkit-background-clip: text;
   color: transparent;
   -webkit-text-fill-color: transparent;
   background-clip: text;
 }
 
-.gradient-accent.duplicate {
+.duplicate .gradient-accent {
   background: black;
   -webkit-background-clip: text;
   color: transparent;
   -webkit-text-fill-color: transparent;
   background-clip: text;
+}
+
+.duplicate .subheading {
+  color: #363636;
+}
+
+.isec-text-content {
+  position: absolute;
+  z-index: 2;
+  background: #e7e7e7;
+  color: #363636;
+
+  font-family: Sora;
+  right: 130px;
+  bottom: 50px;
+  padding: 50px;
+  border-radius: 10px;
+  clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
+}
+
+.isec-text .subheading {
+  margin: 5px 0px 30px 0px;
+  font-size: 20px;
+}
+
+.isec-text .body-text {
+  width: 300px;
+  color: #202020;
+  margin-top: 10px;
+}
+
+.isec-enter-line {
+  width: 500px;
+  height: 0px;
+  position: absolute;
+  right: 130px;
+  top: 90px;
+  display: block;
+  background: white;
+}
+
+.aves-text-content {
+  position: absolute;
+  z-index: 2;
+  background: #e7e7e7;
+  color: #363636;
+  left: 80px;
+  bottom: 50px;
+  font-family: Sora;
+  padding: 50px;
+  clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
+
+  border-radius: 10px;
+}
+
+.aves-text .body-text {
+  width: 300px;
+  color: #202020;
+  margin-top: 10px;
+}
+
+.aves-enter-line {
+  width: 500px;
+  height: 0px;
+  position: absolute;
+  left: 80px;
+  top: 90px;
+  display: block;
+  background: white;
 }
