--- a/src/style/main.css
+++ b/src/style/main.css
@@ -50,7 +50,8 @@ body {
 }
 
 .meter-container {
-  height: 10em;
+  height: 15em;
+  /**^ Change this to get bigger/smaller blobs**/
   display: flex;
   flex-direction: column;
   position: absolute;
@@ -62,13 +63,13 @@ body {
   background: linear-gradient(
     90deg,
     rgba(255, 255, 255, 0) 10%,
-    rgba(41, 41, 41, 1) 40%,
-    rgba(41, 41, 41, 1) 60%,
+    rgba(100, 100, 100, 0.6) 40%,
+    rgba(100, 100, 100, 0.6) 60%,
     rgba(255, 255, 255, 0) 90%
   );
 
   padding: 100% 0;
-  opacity: 0.2;
+  opacity: 0.8;
 }
 
 svg {
@@ -88,7 +89,7 @@ svg {
   left: 80px;
   display: flex;
   align-items: center;
-  margin-bottom: 30px;
+  margin-bottom: 80px;
   /* display: none; */
 }
 
@@ -157,7 +158,7 @@ svg {
 }
 
 .subheading {
-  font-size: 32px;
+  font-size: 30px;
   font-weight: normal;
   color: black;
 }
@@ -170,12 +171,54 @@ svg {
   font-size: 16px;
 }
 
+.scroll-button {
+  margin-left: 30px;
+  margin-top: 300px;
+  border: none;
+  text-decoration: none;
+  padding: 15px 30px;
+  font-weight: bold;
+  font-size: 16px;
+  color: #363636;
+  border-radius: 2px;
+  opacity: 0;
+  background-color: #e7e7e7;
+  font-family: Sora, sans-serif;
+  transition: background-color 0.5s ease;
+}
+
+.scroll-button:hover {
+  background-color: #d6d6d6;
+}
+
+.scroll-button:active {
+  background-color: #bbbbbb;
+}
+
 .gradient-accent {
   background: linear-gradient(39deg, rgba(240, 199, 17, 1) 0%, #e7e7e7 90%);
+  background-size: 150% 150%;
   -webkit-background-clip: text;
   color: transparent;
   -webkit-text-fill-color: transparent;
   background-clip: text;
+}
+
+.gradient-accent:hover {
+  cursor: pointer;
+  animation: gradient-move 5s ease infinite;
+}
+
+@keyframes gradient-move {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
 }
 
 .duplicate .gradient-accent {
@@ -190,7 +233,7 @@ svg {
   color: #363636;
 }
 
-.duplicate .technology-link {
+/* .duplicate .technology-link {
   color: #363636;
   text-decoration: none;
 }
@@ -198,7 +241,7 @@ svg {
 .original .technology-link {
   color: black;
   text-decoration: none;
-}
+} */
 
 .isec-text-content {
   position: absolute;
@@ -404,3 +447,14 @@ img {
   font-weight: bold;
   color: rgb(14, 163, 186);
 }
+
+/* .technology-enter-line {
+  width: 5px;
+  height: 10px;
+  padding: 5px;
+  opacity: 0;
+  margin-left: 10px;
+  position: relative;
+  right: 0;
+  background: #000;
+} */
